fixed typo, changed color scheme, fixed title formatting, redid overall formatting, general cleanup

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 #container
 {
 	width:100%;
-	height:100%;
+	min-height:100%;
+	background-color:#FFD873;
 }
 
 	#header
 	{
-		width:100%;
-		height:5%;
 		float:left;
-		background-color:#2E9AFE;
+		background-color:#FFB800;
 	}
 
 		#headerTitle
@@ -22,11 +21,9 @@
 
 	#links
 	{
-		width:10%;
-		height:95%;
 		height:;
 		float:left;
-		background-color:#58D3F7;
+		background-color:#BF9730;
 	}
 
 		#linksContent
@@ -38,10 +35,8 @@
 
 	#main
 	{
-		width:90%;
-		height:95%;
 		float:left;
-		background-color:#E0F8F7;
+		background-color:#FFCA40;
 	}
 	
 		#mainContent
